# rsms-protocol

./: Cargo.toml  README.md  out.txt
misc/: Cargo.toml  README.md
misc/src/: lib.rs
misc/src/misc/: chat.rs  client_settings.rs  difficulty.rs  dimension.rs  game_mode.rs  property.rs
misc/src/position/: cuboid.rs  location.rs  vector.rs
network/: Cargo.toml
network/codec/: Cargo.toml
network/codec/src/: lib.rs
network/src/: aio.rs  codec.rs  lib.rs
packets/: Cargo.toml
packets/src/: lib.rs  macros.rs
proc_macros/: Cargo.toml
proc_macros/src/: codec.rs  lib.rs  packet.rs
protocol/: Cargo.toml
protocol/src/: lib.rs  protocol_direction.rs
protocol/src/packets/: handshake.rs  login.rs  macros.rs  play.rs  status.rs
protocol/src/packets/play/: client_bound.rs  server_bound.rs
protocol_derive/: Cargo.toml
protocol_derive/src/: lib.rs  packet.rs
protocol_derive/src/protocol/: field.rs  mod.rs  protocol_enum.rs  protocol_struct.rs  ser.rs
protocol_internal/: Cargo.toml
protocol_internal/src/: bool.rs  cow.rs  dyn_array.rs  fixed_vec.rs  lib.rs  option.rs  position.rs  protocol_direction.rs  protocol_state.rs  protocol_version.rs  range_validation.rs  regex.rs  string.rs  types.rs  uuid.rs  vec.rs
protocol_internal/src/numeral/: int.rs  varnum.rs
protocol_internal/src/types/: bool.rs  cow.rs  dyn_array.rs  fixed_vec.rs  option.rs  position.rs  range_validation.rs  regex.rs  string.rs  uuid.rs  vec.rs
protocol_internal/src/types/numeral/: int.rs  varnum.rs
protocol_primitives/: Cargo.toml
protocol_primitives/src/: arc.rs  bool.rs  cow.rs  lib.rs  misc.rs  num.rs  rc.rs  str.rs  vec.rs  version.rs
