[package]
name = "misc"
version = "0.1.0"
authors = ["Luiz Carlos Mourão Paes de Carvalho <luizcarlosmpc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol_derive = { path = "../protocol_derive" }
protocol_internal = { path = "../protocol_internal" }

serde = { version = "1.0.124", features = ["derive"], optional = true }
serde_json = { version = "1.0.64", optional = true }

[features]
default = ["chat"]

chat = ["serde", "serde_json"]
