[package]
name = "network"
version = "0.1.0"
authors = ["Luiz Carlos Mourão Paes de Carvalho <luizcarlosmpc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol_internal = { path = "../protocol_internal" }

aes = "0.6.0"
cfb8 = "0.6.0"
flate2 = { version = "1.0.20", features = ["zlib"] }

[dependencies.tokio]
version = "1.5.0"
features = ["net", "io-util", "sync"]
