[package]
name = "network"
version = "0.1.0"
authors = ["Luiz Carlos Mourão Paes de Carvalho <luizcarlosmpc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../protocol", optional = true }
codec = { path = "./codec", optional = true }

[dependencies.tokio]
version = "1.5.0"
features = ["io-util"]
optional = true

[dev-dependencies]
futures = "0.3.16"

[features]
default = ["aio", "codec", "codec/compression", "codec/encryption"]
aio = ["protocol", "tokio"]