[package]
name = "packets"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc_macros = { path = "../proc_macros" }
protocol_primitives = { path = "../protocol_primitives" }
uuid = "0.8.2"

[features]
default = ["macros", "handshake", "status", "login", "play_1_8"]

macros = []
handshake = ["macros"]
status = ["macros"]
login = ["macros"]
play_1_8 = ["macros"]
