[package]
name = "protocol"
version = "0.1.0"
authors = ["Luiz Carlos Mourão Paes de Carvalho <luizcarlosmpc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol_derive = { path = "../protocol_derive" }
protocol_internal = { path = "../protocol_internal" }

misc = { path = "../misc" }

lazy_static = "1.4.0"
regex = "1.4.5"
uuid = "0.8.2"
bitflags = "1.2.1"

[features]
default = ["derive", "packets"]

derive = []
packets = []
