[package]
name = "protocol_internal"
version = "0.1.0"
authors = ["Luiz Carlos Mourão Paes de Carvalho <luizcarlosmpc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
regex = "1.4.5"
uuid = "0.8.2"