[package]
name = "codec"
version = "0.1.0"
authors = ["Luiz Carlos Mourão Paes de Carvalho <luizcarlosmpc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../../protocol" }
protocol_internal = { path = "../../protocol_internal" }
tokio-util = { version = "0.6.6", features = ["codec"] }
bytes = { version = "1.0.1" }

aes = { version = "0.7.0", optional = true }
cfb8 = { version = "0.7.1", optional = true }
flate2 = { version = "1.0.20", optional = true }

log = "0.4.14"
tracing = { version = "0.1.26", features = ["log"] }

[dev-dependencies]
futures = "0.3.16"

[features]
default = ["compression", "encryption"]

compression = ["flate2"]
encryption = ["aes", "cfb8"]
